--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header nav {
 }
 
 header .logo h2 {
-    font-family:  "Lily Script One", cursive;
+    font-family: "Lily Script One", cursive;
     color: #ffd500;
 }
 
@@ -56,8 +56,8 @@ header .nav-links li a:hover {
 
 .hero-section {
     position: relative;
-    background-image: url('heade.png');
-    background-size : cover;
+    background-image: url('images/heade.png');
+    background-size: cover;
     background-position: center;
     height: 100vh;
     display: flex;
@@ -75,31 +75,33 @@ header .nav-links li a:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to bottom, #0000001d,#0000003d, #0000003d, #ebbe43); 
-    z-index: 1; 
+    background-color: #00000028;
+    z-index: 1;
+
 }
 
 .hero-content {
-    z-index: 2; 
+    z-index: 2;
 }
 
 .hero-section h1 {
-    font-family:  "Lily Script One", cursive;
+    font-family: "Lily Script One", cursive;
     font-size: 70pt;
     margin: 10px;
-    padding-top: 20px;
-    color: #ffffff;
+    color: #ebbe43;
 }
 
 .hero-section p {
     font-family: "Mona Sans", serif;
     font-weight: 300;
     font-size: 14pt;
-    background-color: #99938589;
+    background-color: #00000028;
     color: #000000;
+    padding-bottom: 50px;
     border: 1.5px solid #000000;
     border-radius: 30px;
     padding: 10px 20px 10px 20px;
+    backdrop-filter: blur(10px);
 }
 
 
@@ -111,7 +113,7 @@ header .nav-links li a:hover {
     margin: 50px 0;
     gap: 30px;
     margin-bottom: 100px;
-    
+
 }
 
 #receitas h2 {
@@ -136,7 +138,7 @@ header .nav-links li a:hover {
 }
 
 .recipe-card img {
-    border:1.5px solid #000000;
+    border: 1.5px solid #000000;
     margin-bottom: 15px;
     width: 100%;
     height: 200px;
@@ -164,7 +166,7 @@ header .nav-links li a:hover {
 }
 
 .recipe-card button:hover {
-    background:#171715
+    background: #171715
 }
 
 .recipe-card:hover {
@@ -232,7 +234,7 @@ header .nav-links li a:hover {
 footer {
     text-align: center;
     padding: 20px;
-    background-color: #0d0d0d;
+    background-color: #272727;
     color: white;
 }
 
