--- a/contato-style.css
+++ b/contato-style.css
@@ -13,7 +13,7 @@ body {
 }
 
 header nav {
-    position: absolute;
+    position: fixed;
     width: 95%;
     top: 2%;
     left: 2.5%;
@@ -21,16 +21,17 @@ header nav {
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-    background: #afcfe852;
+    background: #afb6b479;
     backdrop-filter: blur(10px);
     z-index: 10;
-    border-radius: 30px;
+    border-radius: 50px;
     border: 1.5px solid #000000;
 }
 
-header .logo h2 {
-    font-family: "Great Vibes", cursive;
-    color: #8dbde2;
+.logo img {
+    margin-top: 5px;
+    width: 170px; 
+    height: auto;
 }
 
 header .nav-links {
@@ -53,7 +54,6 @@ header .nav-links li a:hover {
     color: #000000;
     text-decoration: underline;
 }
-
 
 .contact-section {
     padding: 150px 30px;
@@ -153,4 +153,16 @@ footer {
 
 footer p {
     font-size: 12pt;
+}
+
+/* Animações de rolagem */
+.scroll-item {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.scroll-item.visible {
+    opacity: 1;
+    transform: translateY(0);
 }
